adding new activity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Trest</string>
+    <string name="testing_for_new_activity">Testing for new activity</string>
+    <string name="todo">TODO</string>
 </resources>
